# szponciciel

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  alembic.ini  demo_captions.py  langgraph.json  pyproject.toml
.claude/skills/update-instruction/: SKILL.md
.github/workflows/: ci-cd.yaml
docs/: karaoke-captions.md  video-generation-architecture.md  writer-critic-graph.md
migrations/: env.py
migrations/versions/: 3d9b2c41f8a0_create_run_metrics.py  4e4b2c6d8e1a_rename_story_mode_ratio.py  5f4a1b0c8e92_unique_run_metrics_persona_run.py  7a3c2d1e9f10_add_run_research_metadata.py  8b22b7a6e3f4_rename_tiktok_post_id.py  9e18d0fc1759_initial.py
scripts/: demo_captions.py  download_videos.py
src/: config.py  logging_config.py  logging_setup.py  merge_captions.py  persona_graph.py  research_categories.py
src/agents/: state.py
src/db/: __init__.py  database.py  seed.py
src/db/seeds/: __init__.py  _utils.py  personas.py
src/graphs/caption_graph/: graph.py
src/graphs/persona_graph/: graph.py
src/graphs/video_assembly_graph/: graph.py
src/graphs/writer_critic_graph/: graph.py  state.py
src/models/: __init__.py  persona.py  persona_run.py  run.py  run_metrics.py
src/nodes/: __init__.py  align_node.py  caption_graph.py  caption_node.py  compose_node.py  compose_simple_node.py  narrator.py  narrator_node.py  state.py  tts_node.py  utils.py  video_assembly_graph.py
src/nodes/caption_node/: node.py  response_format.py  system_prompt.py
src/nodes/generate_tiktok_graph/: graph.py
src/orchestrator/: __main__.py  finalize_node.py  graph.py  intake_node.py  run_personas_node.py  state.py
src/prompts/: __init__.py
src/providers/: __init__.py  ai_video_provider.py  news_provider.py  stock_video_provider.py  video_provider.py
src/schemas/: __init__.py  caption_agent_output.py
src/services/: __init__.py  research_analytics_service.py  run_metrics_service.py
src/tests/: BaseTestClass.py  base_test_class.py  conftest.py  retry_policy.py  test_align_node.py  test_caption_node.py  test_compose_node.py  test_compose_simple_node.py  test_config.py  test_critic_node.py  test_database_url.py  test_finalize_node.py  test_intake_node.py  test_logging_config.py  test_logging_setup.py  test_narrator_node.py  test_pipeline_log.py  test_research_analytics_service.py  test_researcher_node.py  test_run_metrics_service.py  test_run_personas_node.py  test_select_background_node.py  test_tts_node.py  test_upload_node.py  test_writer_node.py
src/tools/: __init__.py  tiktok.py  zernio_service.py
src/utils/: agent_utils.py  graph_utils.py  logging.py  pipeline_log.py
(+27 files in other folders)
