[project]
name = "tiktok-news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.9",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
    "sqlmodel>=0.0.38",
    "tqdm>=4.67.3",
    "zernio-sdk>=1.3.68",
]
