[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "coqui-tts>=0.27.5",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.9",
    "moviepy>=2.2.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "whisperx>=3.8.5",
    "zernio-sdk>=1.3.68",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.27",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    "src/test_agent.ipynb",
    "src/test_agent_fixed_schema.ipynb",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.uv]
exclude-newer = "7 days"
